# QtAppli

./: README.md
Main/MainGui/: CMakeLists.txt  MainGui.qmlproject  qmlmodules
Main/MainGui/content/: App.qml  Screen01.ui.qml
Main/MainGui/imports/: CMakeLists.txt
Main/MainGui/imports/MainGui/: CMakeLists.txt  Constants.qml  qmldir
Main/MainGui/imports/MainGui/designer/: plugin.metainfo
Main/MainGui/src/: import_qml_plugins.h
Main/Test/: CMakeLists.txt  defs.cmake
Main/Test/test/: CMakeLists.txt  defs.cmake  test.cpp
